# extensions-OEParticleSystem

./: CMakeLists.txt  OEParticleSystem.dist  Setup.cmake
Effects/: FireEffect.h  TextEffect.h
ParticleSystem/: BillboardedParticle.h  ColorModifier.h  EulerModifier.h  IEmitter.h  IModifier.h  IParticleEffect.h  IParticleGroup.h  IParticleSet.h  LifespanModifier.h  LinearColorModifier.h  LinearValueModifier.h  OrientationModifier.h  Particle.h  ParticleCollection.h  ParticleGroup.h  ParticleSet.h  ParticleSystem.cpp  ParticleSystem.h  PointEmitter.h  RandomLifespanInitializer.h  RandomTextureInitializer.h  RandomTextureRotationModifier.h  RandomTimeBasedEmitterModifier.h  RandomVerletInitializer.h  SimpleEmitter.h  SizeModifier.h  StaticForceModifier.h  TextureRotationModifier.h  VerletModifier.h
ParticleSystem/Particles/: Color.h  Forces.h  IParticle.h  Life.h  Lifespan.h  Orientation.h  Position.h  PreviousPosition.h  RenderParticle.h  Size.h  Texture.h  Velocity.h
Renderers/OpenGL/: ParticleRenderer.cpp  ParticleRenderer.h
Scene/: EmitterNode.cpp  EmitterNode.h
